# Study-Hub

./: README.md  package.json  pnpm-lock.yaml  pyproject.toml
.agents/skills/notebooklm/: SKILL.md
convex/: schema.ts  users.ts
convex/_generated/: api.d.ts
convex/betterAuth/: auth.ts  schema.ts
convex/betterAuth/_generated/: component.ts
scripts/: convert_fastapi_to_md.sh  convert_python_to_md.sh  format_python.py  generate_config.js
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/chat/: route.ts
src/app/api/search/: route.ts
src/app/dashboard/: layout.tsx  page.tsx
src/app/dashboard/[topic]/: page.tsx
src/app/dashboard/learning/: page.tsx
src/components/: HelpSupportDialog.tsx
src/components/dashboard/: AppSidebar.tsx
src/components/layout/: Header.tsx
src/components/learning/: CopyButton.tsx  MarkdownRenderer.tsx  TableOfContents.tsx  TopicSidebar.tsx
src/components/sections/: Hero.tsx
src/config/: learning.ts
src/content/learning/C++/: 03_conditionals_and_switch.cpp  04_arrays_and_strings.cpp  06_functions.cpp  07_stl_basics.cpp
src/content/learning/fastapi/: 01_introduction_and_setup.py  04_request_body_pydantic.py  05_response_models_and_status.py  06_error_handling.py  07_dependency_injection.py  11_background_tasks_and_files.py  background-tasks-and-files.md  database-crud-sqlite.md  dependency-injection.md  error-handling.md  fastapi-overview.md  middleware-cors.md  (+6 more)
src/lib/: auth-client.ts  auth-server.ts  extract-headings.ts  knowledge-base.ts  parse-cpp.ts  parse-python.ts
src/provider/: ConvexClientProvider.tsx
(+150 files in other folders)
