[project]
name = "study-hub"
version = "0.1.0"
description = ""
authors = [
    {name = "Ritesh Sinha",email = "riteshsinha4146@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain-anthropic (>=1.4.8,<2.0.0)",
    "langchain (>=1.3.11,<2.0.0)",
    "langchain-openai (>=1.3.3,<2.0.0)",
    "langchain-google-genai (>=4.2.7,<5.0.0)",
    "langchain-groq (>=1.1.3,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
